--- a/wayclip_daemon/Cargo.toml
+++ b/wayclip_daemon/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "wayclip-daemon"
+name = "wayclip_daemon"
 version = "0.1.0"
 authors = ["konyogony"]
 edition = "2021"
 
 [dependencies]
+daemonize = "0.5.0"
 tokio = { version = "1", features = ["full"] }
 tokio-uds = "0.2.7"
