--- a/wayclip_gui/package.json
+++ b/wayclip_gui/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "wayclip-gui",
+    "name": "wayclip_gui",
     "private": true,
     "version": "0.1.0",
     "type": "module",
@@ -14,6 +14,7 @@
         "@tauri-apps/plugin-opener": "^2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-router": "^7.5.0"
     },
     "devDependencies": {
         "@types/tailwindcss": "^3.1.0",
@@ -24,8 +25,8 @@
         "vite": "^6.0.3",
         "@tauri-apps/cli": "^2",
         "prettier": "^3.0.0",
-        "prettier-plugin-tailwindcss": "^0.6.11"
-        "tailwindcss": "^4.1.3"
-        "@tailwindcss/vite": "^4.1.3",
+        "prettier-plugin-tailwindcss": "^0.6.11",
+        "tailwindcss": "^4.1.3",
+        "@tailwindcss/vite": "^4.1.3"
     }
 }
