--- a/wayclip_gui/src-tauri/Cargo.toml
+++ b/wayclip_gui/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wayclip-gui"
+name = "wayclip_gui"
 version = "0.1.0"
 authors = ["konyogony"]
 edition = "2021"
@@ -22,3 +22,4 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = "1.44.2"
+wayclip_shared = { path = "../../wayclip_shared" }
