--- a/wayclip_gui/package.json
+++ b/wayclip_gui/package.json
@@ -12,9 +12,12 @@
     "dependencies": {
         "@tauri-apps/api": "^2",
         "@tauri-apps/plugin-opener": "^2",
+        "@vertisanpro/react-icons": "^5.3.0-v3",
+        "clsx": "^2.1.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router": "^7.5.0"
+        "react-router": "^7.5.0",
+        "tailwind-merge": "^3.2.0"
     },
     "devDependencies": {
         "@types/tailwindcss": "^3.1.0",
