--- a/wayclip_gui/package.json
+++ b/wayclip_gui/package.json
@@ -10,6 +10,7 @@
         "tauri": "tauri"
     },
     "dependencies": {
+        "@radix-ui/react-tooltip": "^1.1.8",
         "@tauri-apps/api": "^2",
         "@tauri-apps/plugin-opener": "^2",
         "@vertisanpro/react-icons": "^5.3.0-v3",
