--- a/wayclip_gui/package.json
+++ b/wayclip_gui/package.json
@@ -18,6 +18,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router": "^7.5.0",
+        "sonner": "^2.0.3",
         "tailwind-merge": "^3.2.0"
     },
     "devDependencies": {
