--- a/wayclip_shared/Cargo.toml
+++ b/wayclip_shared/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 
 [dependencies]
 dirs = "6.0.0"
-serde = "1.0.219"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
