--- a/wayclip_daemon/Cargo.toml
+++ b/wayclip_daemon/Cargo.toml
@@ -11,3 +11,8 @@ tokio = { version = "1", features = ["full"] }
 tokio-uds = "0.2.7"
 device_query = "3.0.1"
 chrono = "0.4.40"
+anyhow = "1.0.97"
+pipewire = "0.8.0"
+portal-screencast = "0.1.0"
+ffmpeg-next = "7.1.0"
+zbus = { version = "2.3.2" }
