--- a/wayclip_daemon/Cargo.toml
+++ b/wayclip_daemon/Cargo.toml
@@ -18,3 +18,7 @@ ffmpeg-next = "7.1.0"
 zbus = { version = "2.3.2" }
 xdg-portal = "0.2.0"
 pipewire-sys = "0.8.0"
+ashpd = { version = "0.11.0", features = ["pipewire", "wayland", "tracing"] }
+wayland-client = { version = "0.31.8" }
+enumflags2 = "0.7.11"
+subprocess = "0.2"                                                            #for running ffmpeg
