--- a/wayclip_daemon/Cargo.toml
+++ b/wayclip_daemon/Cargo.toml
@@ -22,3 +22,4 @@ ashpd = { version = "0.11.0", features = ["pipewire", "wayland", "tracing"] }
 wayland-client = { version = "0.31.8" }
 enumflags2 = "0.7.11"
 subprocess = "0.2"                                                            #for running ffmpeg
+libc = "0.2.171"
