--- a/wayclip_daemon/Cargo.toml
+++ b/wayclip_daemon/Cargo.toml
@@ -23,3 +23,6 @@ wayland-client = { version = "0.31.8" }
 enumflags2 = "0.7.11"
 subprocess = "0.2"                                                            #for running ffmpeg
 libc = "0.2.171"
+gstreamer = "0.23.5"
+xcap = "0.4.1"
+gstreamer-app = "0.23.5"
