screenrecording fixed. i added new binary for shortucts. fix the video being sped up pls

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["wayclip_shared", "wayclip_gui/src-tauri", "wayclip_daemon"]
+members = ["wayclip_shared", "wayclip_gui/src-tauri", "wayclip_daemon", "wayclip_trigger"]
