--- a/wayclip_gui/package.json
+++ b/wayclip_gui/package.json
@@ -10,28 +10,29 @@
         "tauri": "tauri"
     },
     "dependencies": {
-        "@radix-ui/react-tooltip": "^1.1.8",
-        "@tauri-apps/api": "^2",
-        "@tauri-apps/plugin-opener": "^2",
+        "@radix-ui/react-tooltip": "^1.2.7",
+        "@tauri-apps/api": "^2.7.0",
+        "@tauri-apps/plugin-opener": "^2.4.0",
         "@vertisanpro/react-icons": "^5.3.0-v3",
+        "all": "^0.0.0",
         "clsx": "^2.1.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router": "^7.5.0",
-        "sonner": "^2.0.3",
-        "tailwind-merge": "^3.2.0"
+        "react-router": "^7.7.1",
+        "sonner": "^2.0.7",
+        "tailwind-merge": "^3.3.1"
     },
     "devDependencies": {
         "@types/tailwindcss": "^3.1.0",
-        "@types/react": "^18.3.1",
-        "@types/react-dom": "^18.3.1",
-        "@vitejs/plugin-react": "^4.3.4",
-        "typescript": "~5.6.2",
-        "vite": "^6.0.3",
-        "@tauri-apps/cli": "^2",
-        "prettier": "^3.0.0",
-        "prettier-plugin-tailwindcss": "^0.6.11",
-        "tailwindcss": "^4.1.3",
-        "@tailwindcss/vite": "^4.1.3"
+        "@types/react": "^18.3.23",
+        "@types/react-dom": "^18.3.7",
+        "@vitejs/plugin-react": "^4.7.0",
+        "typescript": "~5.6.3",
+        "vite": "^6.3.5",
+        "@tauri-apps/cli": "^2.7.1",
+        "prettier": "^3.6.2",
+        "prettier-plugin-tailwindcss": "^0.6.14",
+        "tailwindcss": "^4.1.11",
+        "@tailwindcss/vite": "^4.1.11"
     }
 }
