--- a/wayclip_gui/package.json
+++ b/wayclip_gui/package.json
@@ -13,6 +13,7 @@
         "@radix-ui/react-tooltip": "^1.2.7",
         "@tauri-apps/api": "^2.7.0",
         "@tauri-apps/plugin-opener": "^2.4.0",
+        "@types/node": "^24.2.1",
         "@vertisanpro/react-icons": "^5.3.0-v3",
         "all": "^0.0.0",
         "clsx": "^2.1.1",
