--- a/wayclip_daemon/Cargo.toml
+++ b/wayclip_daemon/Cargo.toml
@@ -12,7 +12,7 @@ chrono = "0.4.40"
 ashpd = { version = "0.11.0", features = ["pipewire", "wayland", "tracing"] }
 wayland-client = { version = "0.31.8" }
 enumflags2 = "0.7.11"
-subprocess = "0.2"                                                            #for running ffmpeg
+subprocess = "0.2"
 libc = "0.2.171"
 gstreamer = "0.23.5"
 xcap = "0.4.1"
