--- a/wayclip_shared/Cargo.toml
+++ b/wayclip_shared/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 dirs = "6.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+chrono = "0.4.40"
+strip-ansi-escapes = "0.2.1"
