--- a/wayclip_gui/src-tauri/Cargo.toml
+++ b/wayclip_gui/src-tauri/Cargo.toml
@@ -19,3 +19,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = "1.44.2"
 wayclip_shared = { path = "../../wayclip_shared" }
+env = "1.0.1"
+chrono = { version = "0.4.41", features = ["serde"] }
+mp4 = "0.14.0"
+dirs = "6.0.0"
