Reworking the structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,3 @@
 [workspace]
-members = [
-  "wayclip_shared",
-  "wayclip_gui/src-tauri",
-  "wayclip_daemon",
-  "wayclip_trigger",
-]
+members = ["wayclip_core", "wayclip_gui/src-tauri"]
 resolver = "3"
