--- a/wayclip_core/Cargo.toml
+++ b/wayclip_core/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "wayclip_daemon"
+name = "wayclip_core"
 version = "0.1.0"
 authors = ["konyogony"]
 edition = "2021"
 
 [dependencies]
-wayclip_shared = { path = "../wayclip_shared" }
 daemonize = "0.5.0"
 tokio = { version = "1", features = ["full"] }
 chrono = "0.4.40"
@@ -18,3 +17,9 @@ gstreamer = "0.23.5"
 xcap = "0.4.1"
 gstreamer-app = "0.23.5"
 futures = "0.3.31"
+dirs = "6.0.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+strip-ansi-escapes = "0.2.1"
+once_cell = "1.21.3"
+rodio = "0.21.1"
