--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["wayclip_core", "wayclip_gui/src-tauri"]
+members = ["wayclip_cli", "wayclip_core", "wayclip_gui/src-tauri"]
 resolver = "3"
