--- a/wayclip_core/Cargo.toml
+++ b/wayclip_core/Cargo.toml
@@ -4,10 +4,14 @@ version = "0.1.0"
 authors = ["konyogony"]
 edition = "2021"
 
+[[bin]]
+name = "trigger"
+path = "src/bin/trigger.rs"
+
 [dependencies]
 daemonize = "0.5.0"
 tokio = { version = "1", features = ["full"] }
-chrono = "0.4.40"
+chrono = { version = "0.4.40", features = ["serde"] }
 ashpd = { version = "0.11.0", features = ["pipewire", "wayland", "tracing"] }
 wayland-client = { version = "0.31.8" }
 enumflags2 = "0.7.11"
@@ -23,3 +27,5 @@ serde_json = "1.0.140"
 strip-ansi-escapes = "0.2.1"
 once_cell = "1.21.3"
 rodio = "0.21.1"
+mp4 = "0.14.0"
+anyhow = "1.0.99"
