--- a/wayclip_gui/package.json
+++ b/wayclip_gui/package.json
@@ -10,38 +10,39 @@
         "tauri": "tauri"
     },
     "dependencies": {
-        "@radix-ui/react-dropdown-menu": "2.1.16-rc.1752791004720",
+        "@base-ui-components/react": "^1.0.0-beta.2",
+        "@headlessui/react": "^2.2.7",
+        "@radix-ui/react-dropdown-menu": "2.1.15",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tooltip": "^1.2.7",
         "@tauri-apps/api": "^2.7.0",
-        "@tauri-apps/plugin-opener": "^2.4.0",
+        "@tauri-apps/plugin-opener": "~2",
         "@types/node": "^24.2.1",
         "@vertisanpro/react-icons": "^5.3.0-v3",
-        "all": "^0.0.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.539.0",
         "motion": "^12.23.12",
         "radix-ui": "^1.4.2",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-router": "^7.7.1",
+        "react": "19.1.1",
+        "react-dom": "^19.1.1",
+        "react-router": "^7.8.0",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.1.11",
         "@tauri-apps/cli": "^2.7.1",
-        "@types/react": "^18.3.23",
-        "@types/react-dom": "^18.3.7",
+        "@types/react": "19.1.10",
+        "@types/react-dom": "19.1.7",
         "@types/tailwindcss": "^3.1.0",
-        "@vitejs/plugin-react": "^4.7.0",
+        "@vitejs/plugin-react": "^5.0.0",
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.6.14",
         "tailwindcss": "^4.1.11",
         "tw-animate-css": "^1.3.6",
-        "typescript": "~5.6.3",
-        "vite": "^6.3.5"
+        "typescript": "~5.9.2",
+        "vite": "^7.1.2"
     },
     "trustedDependencies": [
         "@tailwindcss/oxide"
