--- a/wayclip_gui/package.json
+++ b/wayclip_gui/package.json
@@ -15,7 +15,9 @@
         "@radix-ui/react-dropdown-menu": "2.1.15",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tooltip": "^1.2.7",
+        "@tanstack/react-query": "^5.85.0",
         "@tauri-apps/api": "^2.7.0",
+        "@tauri-apps/plugin-fs": "~2",
         "@tauri-apps/plugin-opener": "~2",
         "@types/node": "^24.2.1",
         "@vertisanpro/react-icons": "^5.3.0-v3",
@@ -27,6 +29,7 @@
         "react": "19.1.1",
         "react-dom": "^19.1.1",
         "react-router": "^7.8.0",
+        "react-smart-ticker": "^1.6.5",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1"
     },
