--- a/wayclip_gui/src-tauri/Cargo.toml
+++ b/wayclip_gui/src-tauri/Cargo.toml
@@ -21,3 +21,5 @@ tokio = "1.44.2"
 wayclip_core = { path = "../../wayclip_core" }
 env = "1.0.1"
 chrono = { version = "0.4.41", features = ["serde"] }
+futures = "0.3.31"
+tauri-plugin-fs = "2"
