--- a/wayclip_gui/package.json
+++ b/wayclip_gui/package.json
@@ -13,6 +13,7 @@
         "@base-ui-components/react": "^1.0.0-beta.2",
         "@headlessui/react": "^2.2.7",
         "@radix-ui/react-dropdown-menu": "2.1.15",
+        "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tooltip": "^1.2.7",
         "@tanstack/react-query": "^5.85.0",
