--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
 [workspace]
-members = ["wayclip_cli", "wayclip_core", "wayclip_gui/src-tauri"]
+members = [
+  "wayclip_api",
+  "wayclip_cli",
+  "wayclip_core",
+  "wayclip_gui/src-tauri",
+]
 resolver = "3"
