--- a/wayclip_core/Cargo.toml
+++ b/wayclip_core/Cargo.toml
@@ -29,3 +29,6 @@ once_cell = "1.21.3"
 rodio = "0.21.1"
 mp4 = "0.14.0"
 anyhow = "1.0.99"
+ffmpeg-next = "7.1.0"
+image = "0.25.6"
+base64 = "0.22.1"
