--- a/wayclip_gui/package.json
+++ b/wayclip_gui/package.json
@@ -17,9 +17,12 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tooltip": "^1.2.7",
         "@tanstack/react-query": "^5.85.0",
-        "@tauri-apps/api": "^2.7.0",
+        "@tauri-apps/api": "^2.8.0",
+        "@tauri-apps/plugin-deep-link": "~2",
         "@tauri-apps/plugin-fs": "~2",
         "@tauri-apps/plugin-opener": "~2",
+        "@tauri-apps/plugin-shell": "~2",
+        "@tauri-apps/plugin-store": "~2",
         "@types/node": "^24.2.1",
         "@vertisanpro/react-icons": "^5.3.0-v3",
         "class-variance-authority": "^0.7.1",
@@ -32,7 +35,8 @@
         "react-router": "^7.8.0",
         "react-smart-ticker": "^1.6.5",
         "sonner": "^2.0.7",
-        "tailwind-merge": "^3.3.1"
+        "tailwind-merge": "^3.3.1",
+        "tauri-plugin-store-api": "^0.0.0"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.1.11",
