--- a/wayclip_gui/src-tauri/Cargo.toml
+++ b/wayclip_gui/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }
+tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -23,3 +23,12 @@ env = "1.0.1"
 chrono = { version = "0.4.41", features = ["serde"] }
 futures = "0.3.31"
 tauri-plugin-fs = "2"
+tauri-plugin-deep-link = "2"
+tauri-plugin-shell = "2"
+tauri-plugin-store = "2"
+url = "2.5.5"
+uuid = { version = "1.18.0", features = ["v4", "serde"] }
+reqwest = { version = "0.12.23", features = ["json"] }
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
