--- a/wayclip_api/Cargo.toml
+++ b/wayclip_api/Cargo.toml
@@ -23,6 +23,7 @@ sqlx = { version = "0.8.6", features = [
   "uuid",
   "chrono",
   "json",
+  "bigdecimal",
 ] }
 uuid = { version = "1.18.0", features = ["serde"] }
 jsonwebtoken = "9.3.1"
@@ -31,3 +32,12 @@ tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tokio = { version = "1.47.1", features = ["full"] }
 tracing-actix-web = "0.7.19"
+lazy_static = "1.5.0"
+config = "0.15.14"
+ssh2 = "0.9.5"
+async-trait = "0.1.89"
+anyhow = "1.0.99"
+actix-multipart = "0.7.2"
+actix-files = "0.6.6"
+actix-ratelimit = "0.3.1"
+actix-extensible-rate-limit = "0.4.0"
