--- a/wayclip_core/Cargo.toml
+++ b/wayclip_core/Cargo.toml
@@ -32,7 +32,7 @@ anyhow = "1.0.99"
 ffmpeg-next = "7.1.0"
 image = "0.25.6"
 base64 = "0.22.1"
-reqwest = { version = "0.12.23", features = ["json"] }
+reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
 sqlx = { version = "0.8.6", features = [
   "runtime-tokio-rustls",
   "postgres",
@@ -43,3 +43,4 @@ sqlx = { version = "0.8.6", features = [
 uuid = { version = "1.18.0", features = ["serde"] }
 nix = { version = "0.30.1", features = ["signal"] }
 colored = "3.0.0"
+tokio-util = { version = "0.7.16", features = ["codec"] }
