--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ members = [
   "wayclip_gui/src-tauri",
 ]
 resolver = "3"
+
+[workspace.metadata.sqlx]
+database = "postgres"
+data-source = "DATABASE_URL"
