--- a/wayclip_api/docker-compose.yml
+++ b/wayclip_api/docker-compose.yml
@@ -1,16 +1,16 @@
 services:
-  api:
-    build: .
-    container_name: wayclip_api
-    env_file:
-      - .env
-    ports:
-      - "8080:8080"
-    volumes:
-      - ./uploads:/usr/src/app/uploads
-    depends_on:
-      - wayclip_db
-    restart: unless-stopped
+  # api:
+  #   build: .
+  #   container_name: wayclip_api
+  #   env_file:
+  #     - .env
+  #   ports:
+  #     - "8080:8080"
+  #   volumes:
+  #     - ./uploads:/usr/src/app/uploads
+  #   depends_on:
+  #     - wayclip_db
+  #   restart: unless-stopped
 
   wayclip_db:
     image: postgres:16-alpine
