--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Install Rust toolchain and sqlx-cli
+      - name: Install system dependencies for Tauri/GTK
         run: |
-          rustup update stable
-          cargo install sqlx-cli
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+
+      - name: Install sqlx-cli
+        run: cargo install sqlx-cli
 
       - name: Cache Cargo dependencies
         uses: actions/cache@v4
@@ -38,8 +41,8 @@ jobs:
       - name: Verify SQLx offline data is up-to-date
         run: cargo sqlx prepare --check --workspace
 
-      - name: Run tests
-        run: cargo test --verbose --workspace
+      - name: Run API tests
+        run: cargo test --verbose -p wayclip_api
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
