--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,16 +19,42 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Install system dependencies for Tauri/GTK
+      - name: Install All System Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
+            build-essential \
+            pkg-config \
+            libssl-dev \
+            patchelf \
+            
             libgtk-3-dev \
             libwebkitgtk-6.0-dev \
             libayatana-appindicator3-dev \
             librsvg2-dev \
-            patchelf \
-            libpipewire-0.3-dev
+            
+            libgstreamer1.0-dev \
+            gstreamer1.0-plugins-base \
+            gstreamer1.0-plugins-good \
+            gstreamer1.0-plugins-bad \
+            gstreamer1.0-plugins-ugly \
+            gstreamer1.0-libav \
+            libpipewire-0.3-dev \
+            libasound2-dev \
+            libavcodec-dev \
+            libavformat-dev \
+            libavutil-dev \
+            libswscale-dev \
+            
+            libwayland-dev \
+            libx11-dev \
+            libxcb1-dev \
+            libxkbcommon-dev \
+            libxrandr-dev \
+            libdbus-1-dev \
+            
+            libpq-dev \
+            libssh2-1-dev
 
       - name: Install sqlx-cli
         run: cargo install sqlx-cli
