--- a/wayclip_cli/Cargo.toml
+++ b/wayclip_cli/Cargo.toml
@@ -3,6 +3,10 @@ name = "wayclip_cli"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "wayclip_cli"
+path = "src/main.rs"
+
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 wayclip_core = { path = "../wayclip_core" }
