update .env [DOCKER]

--- a/wayclip_api/.env.template
+++ b/wayclip_api/.env.template
@@ -10,8 +10,9 @@ JWT_SECRET=
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+REDIRECT_URL=https://wayclip.com
 
-STORAGE_TYPE=
+STORAGE_TYPE= "LOCAL" | "SFTP"
 PUBLIC_URL=
 LOCAL_STORAGE_PATH=
 
